--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.menu {
+  background: var(--p-white);
+  height: 5rem;
+  width: 94vw;
+  margin: 0 auto;
+  border-radius: 1rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.makeTabBtn {
+  background: var(--p-green);
+  border: none;
+  font-weight: 1000;
+  margin: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  flex: 1;
+  font-size: 2vh;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Tabtext {
+  background: var(--p-grey);
+  margin: 0.5rem;
+  margin-left: 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  flex: 5;
+  font-size: 2rem;
+  padding-left: 1rem;
+}
+.Tabtext:focus {
+  outline: none;
 }
