--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -14,6 +14,8 @@
   border-radius: 0.5rem;
   flex: 1;
   font-size: 2vh;
+  cursor: pointer;
+  user-select: none;
 }
 .makeTabBtn:active {
   transform: scale(0.95);
