--- a/src/components/Tabs.css
+++ b/src/components/Tabs.css
@@ -1,17 +1,34 @@
 .Tabs {
   margin: 1rem 0;
-  display: flex;
   height: 4rem;
+  display: flex;
+  width: 50%;
+  display: flex;
 }
 .tab {
   background: var(--p-white);
+  flex: 1;
+  justify-content: center;
   border-radius: 0.5rem;
   padding: 0.5rem;
   margin: 0 0.5rem;
   font-size: 2vh;
   display: flex;
   align-items: center;
+  cursor: pointer;
+  user-select: none;
 }
 .tab:hover {
   outline: 0.4rem solid var(--p-green);
+}
+.carousel {
+  width: 200%;
+  display: flex;
+}
+.carousel::-webkit-scrollbar {
+  display: none;
+}
+.carousel {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
