--- a/src/components/Notes.css
+++ b/src/components/Notes.css
@@ -10,7 +10,7 @@
   background: var(--p-white);
   border-radius: 0.5rem;
   margin: 1rem;
-  height: 14rem;
+  height: auto;
   padding: 1rem;
   font-weight: 400;
   display: flex;
