--- a/src/components/Tabs.css
+++ b/src/components/Tabs.css
@@ -1,9 +1,9 @@
 .Tabs {
-  margin: 1rem 0;
+  margin: 0.5rem 0;
   height: 4rem;
-  display: flex;
+  position: relative;
   width: 50%;
-  display: flex;
+  display: inline-flex;
 }
 .tab {
   background: var(--p-white);
@@ -22,8 +22,9 @@
   outline: 0.4rem solid var(--p-green);
 }
 .carousel {
+  position: relative;
   width: 200%;
-  display: flex;
+  height: 5rem;
 }
 .carousel::-webkit-scrollbar {
   display: none;
