--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -16,6 +16,7 @@
   font-size: 2vh;
   cursor: pointer;
   user-select: none;
+  color: var(--p-white);
 }
 .makeTabBtn:active {
   transform: scale(0.95);
