--- a/src/components/Tabs.css
+++ b/src/components/Tabs.css
@@ -3,16 +3,17 @@
   height: 4rem;
   position: relative;
   width: 50%;
-  display: inline-flex;
+  display: flex;
 }
 .tab {
   background: var(--p-white);
+  min-width: 40rem;
   flex: 1;
   justify-content: center;
   border-radius: 0.5rem;
   padding: 0.5rem;
   margin: 0 0.5rem;
-  font-size: 2vh;
+  font-size: 2rem;
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -23,7 +24,7 @@
 }
 .carousel {
   position: relative;
-  width: 200%;
+  display: inline-flex;
   height: 5rem;
 }
 .carousel::-webkit-scrollbar {
