--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ code {
 :root {
   --p-green: #3cc130;
   --p-black: #181616;
+  --p-shadow: #a2a4a2;
   --p-white: #ebebeb;
-  --p-grey: #afb5b1;
+  --p-grey: #bec2bf;
 }
