--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -1,8 +1,11 @@
 .Noteinput {
-  height: 15%;
+  min-height: 15%;
+  max-height: 25%;
   margin: 0 1rem;
   border-radius: 0.5rem;
   display: flex;
+  flex-flow: row wrap;
+  gap: 1rem;
   margin-bottom: 1rem;
 }
 .makeNoteBtn {
@@ -10,7 +13,7 @@
   border: none;
   border-radius: 0.5rem;
   flex: 1;
-  margin-left: 2rem;
+
   font-weight: 1000;
   font-size: 2rem;
   cursor: pointer;
@@ -20,13 +23,18 @@
 .makeNoteBtn:active {
   transform: scale(0.95);
 }
+.makeNoteBtn:hover {
+  filter: brightness(1.05);
+}
 .Notetext {
   background: var(--p-grey);
   border-radius: 0.5rem;
   border: none;
+  min-width: 15rem;
   flex: 5;
   font-size: 2rem;
   padding-left: 1rem;
+  box-shadow: 0 0.2rem 0.5rem 0.01rem var(--p-shadow) inset;
 }
 .Notetext:focus {
   outline: none;
