--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,8 +1,11 @@
 .main {
   background: var(--p-white);
-  height: 80vh;
+  min-height: 60vh;
+
   width: 94vw;
   margin: 0 auto;
   border-radius: 1rem;
   overflow: auto;
+  overflow-y: hidden;
+  min-width: 300px;
 }
