--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -16,10 +16,10 @@
   background: var(--p-green);
   border: none;
   font-weight: 1000;
-
+  font-size: 2rem;
   border-radius: 0.5rem;
   flex: 1;
-  font-size: 2vh;
+  font-size: 1.5rem;
   cursor: pointer;
   user-select: none;
   color: var(--p-white);
