--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -4,7 +4,7 @@
   max-height: 10rem;
   width: 94vw;
   margin: 0 auto;
-  border-radius: 1rem;
+  border-radius: var(--brdrRadius);
   display: flex;
   flex-flow: row wrap;
   padding: 0.5rem;
@@ -16,13 +16,13 @@
   background: var(--p-green);
   border: none;
   font-weight: 1000;
-  font-size: 2rem;
-  border-radius: 0.5rem;
+  border-radius: var(--brdrRadius);
   flex: 1;
   font-size: 1.5rem;
   cursor: pointer;
   user-select: none;
-  color: var(--p-white);
+  color: var(--p-grey);
+  font-family: "Agdasima", sans-serif;
 }
 .makeTabBtn:active {
   transform: scale(0.95);
@@ -32,13 +32,17 @@
 }
 .Tabtext {
   background: var(--p-grey);
-  box-shadow: 0 0.2rem 0.5rem 0.01rem var(--p-shadow) inset;
-  border-radius: 0.5rem;
+  border-radius: var(--brdrRadius);
   border: none;
   min-width: 15rem;
   flex: 3;
   font-size: 2rem;
   padding-left: 1rem;
+  color: var(--p-font);
+  font-family: "Agdasima", sans-serif;
+}
+.Tabtext::placeholder {
+  color: var(--p-green);
 }
 .Tabtext:focus {
   outline: none;
