--- a/src/components/Tabs.css
+++ b/src/components/Tabs.css
@@ -10,7 +10,7 @@
   min-width: 40rem;
   flex: 1;
   justify-content: center;
-  border-radius: 0.5rem;
+  border-radius: var(--brdrRadius);
   padding: 0.5rem;
   margin: 0 0.5rem;
   font-size: 2rem;
@@ -18,9 +18,10 @@
   align-items: center;
   cursor: pointer;
   user-select: none;
+  transition: 0.5s;
 }
 .tab:hover {
-  background: var(--p-green);
+  filter: brightness(1.2);
 }
 .carousel {
   position: relative;
